# kas-llm-learning

./: .gitignore  AGENTS_TABLE.md  IDENTITY.md  LICENSE  MEMORY.md  README.md  RESEARCH_REPORT_2026_03_08.md  SOUL.md  TEST_PLAN.md  TOOLS.md  TOPOLOGY_IMPLEMENTATION_REPORT.md  WEB_SERVICE_SUMMARY.md  docker-compose.web.yml  pyproject.toml  requirements.txt  run-memory-pipeline.sh  run-memory-with-deepseek.sh  setup.py  setup.sh  test_zhipu_coding_plan.py  test_zhipu_simple.py
.openclaw/: workspace-state.json
.opencode/: opencode.json
DailyTodo/daily-todo/: package-lock.json  package.json  tailwind.config.js
agent-tasks/: chapter34_nas_brief.md
archive/: PHASE70_COMPLETE.txt  PROJECT_SUMMARY_v1.0.md  PROJECT_SUMMARY_v1.1.md
archive/kas_drl/: FINAL_REPORT.md  PROJECT_SUMMARY.md  README.md  __init__.py  main.py  requirements.txt  train.py  train_meta.py
archive/reports/: API_REFERENCE.md  BRIEFING.md  CONTRIBUTING.md  KAS_ASSESSMENT_REPORT.md  KAS_REFACTOR_COMPLETE.md  advanced_spectroscopy_dft_report.md  ai_materials_discovery_report_round1.md  ai_materials_discovery_report_round2.md  ai_materials_discovery_report_round3.md  battery_research_summary.md  battery_research_topic1_ion_transport.md  battery_research_topic2_sei_interface.md  battery_research_topic3_voltage_phase.md  battery_research_topic4_solid_electrolyte.md  battery_research_topic5_comparison.md  catalyst_design_research_report.md  floquet_tddft_research_report.md  generative_ai_materials_research_report.md  kas-roadmap.md  research_final_report.md  research_findings_summary.md  research_log.md  research_topic1_z2_chern.md  research_topic2_surface_fermi_arc.md  research_topic3_wannier_tb.md  research_topic4_qshe_qahe.md  research_topic5_majorana.md  visualization_research_report.md
archive/temp/: 19d22f36-b742-89e3-8000-0000191de9d9_UDO_W._POHL_-_EPITAXY_OF_SEMICONDUCTORS_physics_and_fabrication_of_heterostructures.-SPRINGER_NATURE_2020__batches.html  19d22f36-b742-89e3-8000-0000191de9d9_UDO_W._POHL_-_EPITAXY_OF_SEMICONDUCTORS_physics_and_fabrication_of_heterostructures.-SPRINGER_NATURE_2020__batches.json  19d22f36-b742-89e3-8000-0000191de9d9_UDO_W._POHL_-_EPITAXY_OF_SEMICONDUCTORS_physics_and_fabrication_of_heterostructures.-SPRINGER_NATURE_2020__batches_translated.json  3d_visualization.py  integrated_pipeline.py  interactive_dashboard.py  ovito_defect_analysis.py  pdf_professional_processor.py  pdf_translator.py  pymatgen_materials_analysis.py  translate_and_generate.py  vmd_biomolecular_analysis.py
docs/: COMPLETION_REPORT.md  MULTISCALE_README.md  advanced_potentials_technical_documentation.md  multiscale_technical_documentation.md
kas/: .gitignore  README.md  ROADMAP.md  requirements.txt  setup.py
kas-cloud/: README.md  auth.py  database.py  main.py  market.py  start.sh  users.py
kas/cli/: main.py
kas/core/: chat.py  cloud_market.py  config.py  fusion.py  ingestion.py  market.py  models.py  stats.py  validation.py  versioning.py
kas/docs/: ARCHITECTURE.md  PHASE4_REDESIGN.md
kas/examples/: basic_usage.py  protocol_demo.py
kas/kimi_agent_studio.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
kas/reviews/: auto_fix_20260318_024050.json  code_review_20260318_024050.json  code_review_20260318_024502.json  code_review_20260318_024502.md  code_review_20260318_030003.json  code_review_20260318_030003.md  code_review_20260318_031502.json  code_review_20260318_031502.md  code_review_20260318_033002.json  code_review_20260318_033002.md  code_review_20260318_034502.json  code_review_20260318_034502.md  code_review_20260318_041502.json  code_review_20260318_041502.md  code_review_20260318_043002.json  code_review_20260318_043002.md  code_review_20260318_044502.json  code_review_20260318_044502.md  code_review_20260318_050316.json  code_review_20260318_050316.md  code_review_20260318_051507.json  code_review_20260318_051507.md  code_review_20260318_053322.json  code_review_20260318_053322.md  code_review_20260318_054504.json  code_review_20260318_054504.md  code_review_20260318_060106.json  code_review_20260318_060106.md  code_review_20260318_061504.json  code_review_20260318_061504.md  code_review_20260318_063006.json  code_review_20260318_063006.md  code_review_20260318_070004.json  code_review_20260318_071503.json  code_review_20260318_074535.md  code_review_20260318_081504.json  code_review_20260318_081504.md  code_review_20260318_094505.md  code_review_20260318_103005.md  code_review_20260318_104507.md  (+8 more)
kas/scripts/: auto_code_review.py.backup_20260318_024050  generate_daily_report.py
kas/tests/: test_core.py
memory/: 2026-03-17.md  2026-03-18.md  2026-03-24.md  2026-03-25.md  2026-03-26-chapter44-plan.md  2026-03-26-chapter52-plan.md  2026-03-26-chapter53-plan.md  2026-03-26-chapter53-research.md  2026-03-26-chapter54-plan.md  2026-03-26-chapter55-plan.md  2026-03-26.md  2026-03-27-chapter55-start.md  2026-03-27-chapter59-plan.md  2026-03-27.md  2026-03-30.md  2026-03-31.md  2026-04-02.md  2026-04-03.md  2026-04-04.md  2026-04-06.md  2026-04-07.md  2026-04-08.md  2026-04-09.md  2026-04-10.md  cron-whip-2026-03-31-0550.md  extracted.jsonl  knowledge-graph.json  knowledge-summary.md  ml-book-progress-2026-03-31-0603.md  research-log-2025-03-08.md
projects/: dft_frontier_research_final.md  dft_frontier_research_v2.md  dft_frontier_research_v3.md
projects/chat-pet-v2/: README.md
projects/dft_lammps_research/scripts/: Makefile  codecov.yml  dashboard_config.yaml  generate_demo_data.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  requirements_dashboard.txt  run_tests.py  screening_config.yaml
reports/: PACKAGE_STRUCTURE.md  RESEARCH_SUMMARY.md
research/: FINAL_REPORT.md  ML_DFT_IMPLEMENTATION_REPORT.md  PIMD_ACCELERATED_DYNAMICS_REPORT.md  QUANTUM_TRANSPORT_IMPLEMENTATION_REPORT.md  module1_materials_integration.md  module2_high_throughput_automation.md  module3_ml_structure_prediction.md  module4_property_prediction.md  module5_knowledge_graph.md
skills/: .skills_store_lock.json
tests/: conftest.py  test_integration.py
(+1552 files in other folders)
