[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "dftlammps"
version = "1.0.0"
description = "Integration of DFT calculations with LAMMPS molecular dynamics"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "DFT+LAMMPS Integration Team", email = "dftlammps@example.com"}
]
keywords = ["dft", "lammps", "molecular-dynamics", "machine-learning", "materials-science"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]

dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "ase>=3.22.0",
    "pymatgen>=2022.0.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.4.0",
    "pyyaml>=6.0",
    "tqdm>=4.60.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "sphinx-autodoc-typehints>=1.18.0",
]
deepmd = [
    "deepmd-kit>=2.0.0",
    "dpdata>=0.2.0",
]
screening = [
    "matminer>=0.7.0",
    "dscribe>=1.2.0",
    "mp-api>=0.30.0",
]
viz = [
    "ovito>=3.7.0",
    "nglview>=3.0.0",
    "plotly>=5.0.0",
    "pyvista>=0.37.0",
]
all = [
    "deepmd-kit>=2.0.0",
    "dpdata>=0.2.0",
    "matminer>=0.7.0",
    "dscribe>=1.2.0",
    "mp-api>=0.30.0",
    "ovito>=3.7.0",
    "nglview>=3.0.0",
    "plotly>=5.0.0",
    "pyvista>=0.37.0",
]

[project.scripts]
dftlammps = "dftlammps.cli:main"
dftlammps-workflow = "dftlammps.cli.workflow:main"
dftlammps-screening = "dftlammps.cli.screening:main"

[project.urls]
Homepage = "https://github.com/example/dftlammps"
Documentation = "https://dftlammps.readthedocs.io"
Repository = "https://github.com/example/dftlammps.git"
"Bug Tracker" = "https://github.com/example/dftlammps/issues"

[tool.setuptools]
packages = ["dftlammps", "dftlammps.core", "dftlammps.hpc", "dftlammps.applications", "dftlammps.utils"]
include-package-data = true

[tool.setuptools.package-data]
dftlammps = ["*.yaml", "*.json", "data/*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["dftlammps"]
omit = [
    "*/tests/*",
    "*/test_*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
