# pyproject.toml
# Project configuration file

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dft-md-ml-platform"
version = "1.0.0"
description = "DFT-MD-ML Multi-Scale Materials Computing Platform"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "pytest-timeout>=2.0.0",
    "pytest-asyncio>=0.20.0",
    "pytest-mock>=3.0.0",
    "pytest-benchmark>=4.0.0",
]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "bandit>=1.7.0",
]

# =============================================================================
# Black 代码格式化
# =============================================================================
[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

# =============================================================================
# isort 导入排序
# =============================================================================
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
src_paths = ["."]
known_first_party = ["dft_to_lammps_bridge", "nep_training_pipeline", "hpc_scheduler"]

# =============================================================================
# MyPy 类型检查
# =============================================================================
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "numpy.*",
    "scipy.*",
    "matplotlib.*",
    "pandas.*",
    "pymatgen.*",
    "ase.*",
    "torch.*",
    "sklearn.*",
    "lammps.*",
]
ignore_missing_imports = true

# =============================================================================
# Flake8 代码检查 (使用setup.cfg格式)
# =============================================================================
[tool.flake8]
max-line-length = 100
max-complexity = 15
select = "E,F,W,C"
ignore = "E203,E501,W503"
exclude = ".git,__pycache__,build,dist,.venv,venv,migrations"
per-file-ignores = "__init__.py:F401,tests/*:D,S"

# =============================================================================
# Bandit 安全扫描
# =============================================================================
[tool.bandit]
exclude_dirs = ["tests", "benchmarks", "examples"]
skips = ["B101", "B601"]

# =============================================================================
# 基准测试配置 (pytest-benchmark)
# =============================================================================
[tool.pytest-benchmark]
min_rounds = 5
max_time = 60.0
min_time = 0.000005
timer = "perf_counter"
group_by = "group"
sort = "mean"
verbose = false
histogram = true
